added NemoTest and changed graphic mechanic in animals;
zmieniłam to z grafiką wszędzie ale idk czy jajko też potrzebuje wiec jakby coś nie grało to trzeba przekopiować stare