@@ -29,6 +29,13 @@ application {
 
 test {
     useJUnitPlatform()
+    jvmArgs += [
+            '--add-opens=javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED',
+            '-Dtestfx.robot=glass',
+            '-Dtestfx.headless=true',
+            '-Dprism.order=sw',
+            '-Djava.awt.headless=true',
+    ]
 }
 
 java {
